tests/baselines/reference/bestCommonTypeWithContextualTyping.errors.txt
bestCommonTypeWithContextualTyping.ts(16,26): error TS2454: Variable 'e' is used before being assigned.
bestCommonTypeWithContextualTyping.ts(17,45): error TS2454: Variable 'e' is used before being assigned.
bestCommonTypeWithContextualTyping.ts(19,38): error TS2454: Variable 'e' is used before being assigned.
bestCommonTypeWithContextualTyping.ts(19,42): error TS2454: Variable 'e' is used before being assigned.
bestCommonTypeWithContextualTyping.ts(20,32): error TS2454: Variable 'e' is used before being assigned.
bestCommonTypeWithContextualTyping.ts(20,37): error TS2454: Variable 'e' is used before being assigned.


==== bestCommonTypeWithContextualTyping.ts (6 errors) ====
    interface Contextual {
        dummy;
        p?: number;
    }
    
    interface Ellement {
        dummy;
        p: any;
    }
    
    var e: Ellement;
    
    // All of these should pass. Neither type is a supertype of the other, but the RHS should
    // always use Ellement in these examples (not Contextual). Because Ellement is assignable
    // to Contextual, no errors.
    var arr: Contextual[] = [e]; // Ellement[]
                             ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var obj: { [s: string]: Contextual } = { s: e }; // { s: Ellement; [s: string]: Ellement }
                                                ~
!!! error TS2454: Variable 'e' is used before being assigned.
    
    var conditional: Contextual = null ? e : e; // Ellement
                                         ~
!!! error TS2454: Variable 'e' is used before being assigned.
                                             ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var contextualOr: Contextual = e || e; // Ellement
                                   ~
!!! error TS2454: Variable 'e' is used before being assigned.
                                        ~
!!! error TS2454: Variable 'e' is used before being assigned.